# ai_mcp

./: pyproject.toml
src/ai_mcp/: __init__.py  main.py  tool.py
