[project]
name = "ai-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lujie.xu", email = "lujie.xu@okg.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
    "psutil>=7.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ai_mcp = "ai_mcp:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
